derive_tests/tests/compile_fail/no_args.stderr
error: unexpected end of input, expected nested attribute
 --> tests/compile_fail/no_args.rs:5:22
  |
5 |     #[validate(range())]
  |                      ^
